@@ -76,12 +76,29 @@ package lu.fisch.structorizer.generators;
  *      Kay Gürtzig         2023-10-04      Bugfix #1093 Undue final return 0 on function diagrams
  *      Kay Gürtzig         2023-11-08      Bugfix #1109 Insufficient handling of rethrow
  *      Kay Gürtzig         2024-03-19      Issue #1148: Special indentation for "if else if" chains
+ *      Kay Gürtzig         2025-02-06      Bugfix #1188: Array declarations in C style weren't correctly
+ *                                          processed. Array declarations for vintage BASIC no longer suppressed
+ *      Kay Gürtzig         2025-02-07/08   Bugfix #1190: Includables now fully involved. Declaration placement
+ *                                          fundamentally revised, record and array inits now recursive.
  *
  ******************************************************************************************************
  *
  *      Comments:
  *
- *      2015.12.21 - Bugfix #41/#68/#69 (Kay Gürtzig)
+ *      2025-02-06/07 - Bugfixes #1188, #1190 (Kay Gürtzig)
+ *      - Severe deficiencies were found w.r.t. type definitions, declarations and includes as well as
+ *        nested initialisation expressions. Apparently the includes have never been considered here. The
+ *        variable declarations in the preamble were incomplete (particularly for vintage mode none were
+ *        produced). No record type definitions were produced for modern BASIC mode (no line numbering).
+ *        Otherwise the variable declarations in the preamble preceded their type definitions. So this has
+ *        to be fundamentally revised and updated.
+ *        It was considered to add all definitions and declarations where they occur in the diagrams rather
+ *        than to concentrate them in the preamble (This would not of course apply to definitions from
+ *        involved Includables). But this turned out to produce nonsense e.g. for an iterative array filling
+ *        within loops where the target array variable wasn't mentioned before the loop.
+ *        
+ *
+ *      2015-12-21 - Bugfix #41/#68/#69 (Kay Gürtzig)
  *      - Operator replacement had induced unwanted padding and string literal modifications
  *      - new subclassable method transformTokens() for all token-based replacements 
  *      
@@ -292,6 +309,11 @@ public class BasGenerator extends Generator
 		if (this.optionCodeLineNumbering()) {
 			keyword = keyword.toUpperCase();
 		}
+		// START KGU#1176 2025-02-07: Bugfix #1190
+		else if (keyword.equalsIgnoreCase("TYPE")) {
+			keyword = "Structure";	// The VisualBasic equivalent for TYPE
+		}
+		// END KGU#1176 2025-02-07
 		else {
 			String[] parts = keyword.split(" ", -2);
 			for (int i = 0; i < parts.length; i++) {
@@ -580,11 +602,8 @@ public class BasGenerator extends Generator
 				// START KGU#779 2019-12-01: Bugfix #790 (enh. #416)
 				TokenList tokens = lines.get(i);
 				Syntax.unifyOperators(tokens, false);
-				boolean isRecordInit = false;
+				boolean done = false;
 				// END KGU#779 2019-12-01
-				// START KGU#100 2016-01-22: Enh. #84 - resolve array initialisation
-				boolean isArrayInit = false;
-				// START KGU#171 2016-03-31: Enh. #144 / KGU#779 2019-12-01: bugfix #790 
 				//if (this.optionBasicLineNumbering())
 				if (!this.suppressTransformation /*&& this.optionCodeLineNumbering()*/)
 				// END KGU#171 2016-03-31 / KGU#779 2019-12-01
@@ -592,6 +611,7 @@ public class BasGenerator extends Generator
 					// START KGU#779 2019-12-01
 					// FIXME: Could we provide the typemap or isn't it worth the trouble?
 					if (Instruction.isTypeDefinition(tokens, null)) {
+						// In most cases this won't do anything because it's already generated
 						generateTypeDef(tokens, root, _indent, disabled);
 						continue;
 					}
@@ -609,40 +629,56 @@ public class BasGenerator extends Generator
 							continue;
 						}
 						// END KGU#1089 2023-10-17: Issue #980
+						declareVariable(varName, root, _indent);
 						TokenList exprTokens = tokens.subSequenceToEnd(asgnPos+1);
-						isArrayInit = !exprTokens.isEmpty() && exprTokens.get(0).equals("{") 
-								&& exprTokens.get(exprTokens.size()-1).equals("}");
 						// START KGU#780 2019-12-01 - trouble with complicated left sides fixed
 						int posColon = leftSide.indexOf(":");
 						int posAs = leftSide.indexOf("as", false);
 						if (posColon > 0) {
+							// FIXME #1188 extract the element type and dimensions for the DIM statement!
 							leftSide = leftSide.subSequence(0, posColon);
 						}
 						if (posAs > 0 && posAs < leftSide.size()) {
+							// FIXME #1188 extract the element type and dimensions for the DIM statement!
 							leftSide = leftSide.subSequence(0, posAs);
 						}
+						// START KGU#1173 2025-02-06: Bugfix #1188 With a declaration, remove dimensions
+						int posVar = leftSide.indexOf(varName);
+						boolean isCDecl = posVar > 0;
+						if (isCDecl && posVar+1 < leftSide.size() && leftSide.get(posVar+1).equals("[")) {
+							leftSide.remove(posVar+1, leftSide.size());
+						}
+						// END KGU#1173 2025-02-06
 						String target = leftSide.getString();
 						varName = transform(target.substring(target.indexOf(varName)));
-						// END KGU#780 2019-12-01
-						if (isArrayInit)
-						{
-							generateArrayInit(varName, exprTokens, _indent, disabled);
-						}
-						TokenList compList = null;
-						isRecordInit = !isArrayInit && exprTokens.size() > 2 && Syntax.isIdentifier(exprTokens.get(0), false, null)
-								&& exprTokens.get(exprTokens.size()-1).equals("}")
-								&& !(compList = exprTokens.subSequenceToEnd(1)).isBlank()
-								&& compList.get(0).equals("{");
-						if (isRecordInit) {
-							TypeMapEntry type = root.getTypeInfo(routinePool).get(":" + exprTokens.get(0));
-							if (type != null && Syntax.isIdentifier(varName, false, null) && !this.wasDefHandled(root, varName, true)) {
-								addCode(transformKeyword("DIM ") + varName + transformKeyword(" AS ") + type.typeName, _indent, disabled);
-							}
-							this.generateRecordInit(varName, exprTokens.getString(), _indent, disabled, type);
-						}
+						// START KGU#1175 2025-02-08: EXTRACTED to generateAssignment(...)
+//						boolean isArrayInit = !exprTokens.isEmpty() && exprTokens.getFirst().equals("{") && exprTokens.getLast().equals("}");
+//						// END KGU#780 2019-12-01
+//						if (isArrayInit)
+//						{
+//							generateArrayInit(varName, exprTokens, _indent, disabled);
+//						}
+//						StringList compList = null;
+//						boolean isRecordInit = !isArrayInit && exprTokens.size() > 2 && Syntax.isIdentifier(exprTokens.get(0), false, null)
+//								&& exprTokens.getLast().equals("}")
+//								&& !(compList = exprTokens.subSequenceToEnd(1).isBlank()
+//								&& compList.getFrst().equals("{");
+//						if (isRecordInit) {
+//							TypeMapEntry type = root.getTypeInfo(routinePool).get(":" + exprTokens.get(0));
+//							// START KGU#1175 2025-02-07: Bugfx #1190 Duplicate declaration should be avoided
+//							//if (type != null && Function.testIdentifier(varName, false, null) && !this.wasDefHandled(root, varName, true)) {
+//							if (type != null && Function.testIdentifier(varName, false, null) && !this.wasDefHandled(root, varName, true, true)) {
+//							// END KGU#1175 2025-02-07
+//								addCode(transformKeyword("DIM ") + varName + transformKeyword(" AS ") + type.typeName, _indent, disabled);
+//							}
+//							this.generateRecordInit(varName, exprTokens.concatenate(), _indent, disabled, type);
+//						}
+						generateAssignment(varName, exprTokens, root, _indent, disabled);
+						done = true;
+						// END KGU#1175 2025-02-08
 					}
 				}
-				if (!isArrayInit && !isRecordInit)
+				if (!done)
 				{
 				// END KGU#100 2016-01-22
 					// START KGU#277/KGU#284 2016-10-13/16: Enh. #270 + Enh. #274
@@ -656,6 +692,14 @@ public class BasGenerator extends Generator
 					if (!Instruction.isMereDeclaration(tokens)) {
 						addCode(codeLine, _indent, disabled);
 					}
+					// START KGU#1175 2025-02-07: Bugfix #1190 We should not suppress within Includables
+					else if (root.isInclude()) {
+						StringList declNames = Instruction.getDeclaredVariables(tokens);
+						for (int j = 0; j < declNames.count(); j++) {
+							this.declareVariable(declNames.get(j), root, _indent);
+						}
+					}
+					// END KGU#1175 2025-02-07
 					// END KGU#993 2021-10-04
 					// END KGU#277/KGU#284 2016-10-13/16
 				// START KGU#100 2016-01-22: Enh. #84 (continued)
@@ -665,11 +709,57 @@ public class BasGenerator extends Generator
 		}
 	}
 
+	// START KGU#1175 2025-02-08: Bugfix #1190
 	/**
-	 * @param _targetVar
-	 * @param _exprTokens
-	 * @param _indent
-	 * @param _disabled
+	 * Generates the code for an assignment of the value represented by the token
+	 * list {@code _exprTokens} and may be a complex expression (e.g. an array or
+	 * record initialiser expression) to variable {@code _varName} (which might be
+	 * e.g. a qualified record component path).
+	 * 
+	 * @param _varName - the access path for the target variable (might e.g. be a
+	 *     record variable component)
+	 * @param _exprTokens - the tokenized value expression (operator-unified but not
+	 *     yet transformed).
+	 * @param _root - the {@link Root} the instruction originates from
+	 * @param _indent - the indentation string
+	 * @param _disabled - whether the instruction was enabled (such that the code
+	 *     will have to be "outcommented".
+	 */
+	private void generateAssignment(String _varName, TokenList _exprTokens, Root _root, String _indent, boolean _disabled)
+	{
+		boolean isArrayInit = !_exprTokens.isEmpty() && _exprTokens.getFirst().equals("{") && _exprTokens.getLast().equals("}");
+		// END KGU#780 2019-12-01
+		if (isArrayInit)
+		{
+			generateArrayInit(_varName, _exprTokens, _indent, _disabled);
+		}
+		TokenList compList = null;
+		boolean isRecordInit = !isArrayInit && _exprTokens.size() > 2 && Syntax.isIdentifier(_exprTokens.get(0), false, null)
+				&& _exprTokens.getLast().equals("}")
+				&& !(compList = _exprTokens.subSequenceToEnd(1)).isEmpty()
+				&& compList.get(0).equals("{");
+		if (isRecordInit) {
+			this.generateRecordInit(_varName, _exprTokens, _root, _indent, _disabled);
+		}
+		if (!isArrayInit && !isRecordInit) {
+			String keyword = "";
+			if (this.optionCodeLineNumbering()) {
+				keyword = transformKeyword("Let ");
+			}
+			addCode(keyword + _varName + " = " + transform(_exprTokens.getString()), _indent, _disabled);
+		}
+	}
+	
+	/**
+	 * Adds code lines to fill the array {@code _targetVar} with the values
+	 * extracted from the initialiser expression {@code _exprTokens}.
+	 * 
+	 * @param _targetVar - name (or access expression) of the target array
+	 *    variable
+	 * @param _exprTokens - the initialiser expression as token list
+	 * @param _indent - the current indentation (as string)
+	 * @param _disabled - whether the originating element is disabled (will
+	 *    lead to insertion as comment)
 	 */
 	private void generateArrayInit(String _targetVar, TokenList _exprTokens, String _indent, boolean _disabled) {
 		ArrayList<TokenList> elements = Syntax.splitExpressionList(
@@ -680,10 +770,10 @@ public class BasGenerator extends Generator
 			// index range here (though in Pascal indexing usually 
 			// starts with 1 but may vary widely). We solve the problem
 			// by providing a configurable start index variable 
-			appendComment("TODO: Check indexBase value (automatically generated)", _indent);
-			// START KGU#277 2016-10-13: Enh. #270
+			//appendComment("TODO: Check indexBase value (automatically generated)", _indent);
+			// START KGU#277 2016-10-13: Enh. #270 | 2025-02-06 Obsolete
 			//code.add(this.getLineNumber() + _indent + "LET indexBase = 0");
-			addCode(transformKeyword("LET") + " indexBase = 0", _indent, _disabled);
+			//addCode(transformKeyword("LET") + " indexBase = 0", _indent, _disabled);
 			// END KGU#277 2016-10-13
 			for (int el = 0; el < elements.size()-1; el++)
 			{
@@ -691,16 +781,64 @@ public class BasGenerator extends Generator
 				//code.add(this.getLineNumber() + _indent + "LET " + varName + 
 				//		"(indexBase + " + el + ") = " + 
 				//		transform(elements.get(el)));
-				addCode(transformKeyword("LET ") + _targetVar + "(indexBase + " + el + ") = " + 
-						transform(elements.get(el).getString()), _indent, _disabled);
+				// START KGU#1175 2025-02-06: Bugfix #1190 indexBase is obsolete
+				//addCode(transformKeyword("LET ") + _targetVar + "(indexBase + " + el + ") = " + 
+				addCode(transformKeyword("LET ") + _targetVar + "(" + el + ") = " +
+				// END KGU1175 2025-02-06
+								transform(elements.get(el)), _indent, _disabled);
 				// END KGU#277 2016-10-13
 			}
 		}
 		else {
-			addCode(transformKeyword("LET ") + _targetVar + " = " + 
+			addCode(_targetVar + " = " + 
 					transform(_exprTokens.getString()), _indent, _disabled);
 		}
 	}
+
+	// START KGU#388 2019-12-01: Enh. #423
+	/**
+	 * Generates code that decomposes a record initializer into separate component
+	 * assignments if necessary or converts it into the appropriate target language.
+	 * 
+	 * 
+	 * @param _lValue - the left side of the assignment (without modifiers!)
+	 * @param _recordValue - the record initializer according to Structorizer syntax
+	 * @param _indent - current indentation level (as String)
+	 * @param _isDisabled - indicates whether the code is o be commented out
+	 * @param _typeEntry - used to interpret a simplified record initializer (may be null)
+	 */
+	// START KGU#559 2018-07-20: Enh. #563
+	//protected void generateRecordInit(String _lValue, String _recordValue, String _indent, boolean _isDisabled) {
+	//	HashMap<String, String> comps = Instruction.splitRecordInitializer(_recordValue, null);
+	protected void generateRecordInit(String _lValue, TokenList _exprTokens, Root _root, String _indent, boolean _isDisabled)
+	{
+		TypeMapEntry type = _root.getTypeInfo(routinePool).get(":" + _exprTokens.get(0));
+		String recordValue = _exprTokens.getString();
+		// START KGU#771 2019-11-24: Bugfix #783 In case of an unknown record type we should at least write the original content
+		if (type == null) {
+			addCode(transformKeyword("LET ") + transform(_lValue) + " = " + recordValue + "\t" + this.commentSymbolLeft() + " FIXME: missing type information for struct! " + this.commentSymbolRight(),
+					_indent, false);
+			return;
+		}
+		HashMap<String, String> comps = Syntax.splitRecordInitializer(_exprTokens, type);
+		// START KGU#1021 2021-12-05: Bugfix #1024 Instruction might be defective
+		if (comps == null) {
+			appendComment("ERROR: defective record initializer in diagram:", _indent);
+			appendComment(recordValue, _indent);
+			return;
+		}
+		// END KGU#1021 2021-12-05
+		for (Entry<String, String> comp: comps.entrySet()) {
+			String compName = comp.getKey();
+			String compVal = comp.getValue();
+			if (!compName.startsWith("§") && compVal != null) {
+				// FIXME (KGU#560) 2018-07-21: how can we fix recursive initializers? See CGenerator
+				//addCode(transformKeyword("LET ") + transform(_lValue) + "." + compName + " = " + transform(compVal), _indent, _isDisabled);
+				generateAssignment(transform(_lValue) + "." + compName, new TokenList(compVal, _isDisabled), _root, _indent, _isDisabled);
+			}
+		}
+	}
+	// END KGU#388 2019-12-01
 
 	// START KGU#779 2019-12-01: Issue #790 Type (record/enum) definitions hadn't been handled at all
 	/**
@@ -774,47 +912,7 @@ public class BasGenerator extends Generator
 		this.setDefHandled(_root.getSignatureString(false, false), typeKey);
 		return true;
 	}
-
-	// START KGU#388 2019-12-01: Enh. #423
-	/**
-	 * Generates code that decomposes a record initializer into separate component assignments if
-	 * necessary or converts it into the appropriate target language.
-	 * 
-	 * @param _lValue - the left side of the assignment (without modifiers!)
-	 * @param _recordValue - the record initializer according to Structorizer syntax
-	 * @param _indent - current indentation level (as String)
-	 * @param _isDisabled - indicates whether the code is o be commented out
-	 * @param _typeEntry - used to interpret a simplified record initializer (may be null)
-	 */
-	// START KGU#559 2018-07-20: Enh. #563
-	//protected void generateRecordInit(String _lValue, String _recordValue, String _indent, boolean _isDisabled) {
-	//	HashMap<String, String> comps = Instruction.splitRecordInitializer(_recordValue, null);
-	protected void generateRecordInit(String _lValue, String _recordValue, String _indent, boolean _isDisabled, TypeMapEntry _typeEntry)
-	{
-		// START KGU#771 2019-11-24: Bugfix #783 In case of an unknown record type we should at least write the original content
-		if (_typeEntry == null) {
-			addCode(transformKeyword("LET ") + transform(_lValue) + " = " + _recordValue + "\t" + this.commentSymbolLeft() + " FIXME: missing type information for struct! " + this.commentSymbolRight(),
-					_indent, false);
-			return;
-		}
-		HashMap<String, String> comps = Instruction.splitRecordInitializer(_recordValue, _typeEntry);
-		// START KGU#1021 2021-12-05: Bugfix #1024 Instruction might be defective
-		if (comps == null) {
-			appendComment("ERROR: defective record initializer in diagram:", _indent);
-			appendComment(_recordValue, _indent);
-			return;
-		}
-		// END KGU#1021 2021-12-05
-		for (Entry<String, String> comp: comps.entrySet()) {
-			String compName = comp.getKey();
-			String compVal = comp.getValue();
-			if (!compName.startsWith("§") && compVal != null) {
-				// FIXME (KGU#560) 2018-07-21: how can we fix recursive initializers? See CGenerator
-				addCode(transformKeyword("LET ") + transform(_lValue) + "." + compName + " = " + transform(compVal), _indent, _isDisabled);
-			}
-		}
-	}
-	// END KGU#388 2019-12-01
+	// END KGU#779 2019-12-01
 
     @Override
     protected void generateCode(Alternative _alt, String _indent)
@@ -1488,6 +1586,13 @@ public class BasGenerator extends Generator
 			// START KGU#363 2017-05-16: Enh. #372
 			appendCopyright(_root, _indent, true);
 			// END KGU#363 2017-05-16
+
+			// START KGU#1175 2025-02-07: Bugfix #1190 Includables had been forgotten
+			if (_root.isSubroutine()) {
+				appendIncludeCode(_indent);
+			}
+			// END KGU#1175 2025-02-07
+			
 			subroutineInsertionLine = code.count();	// (this will be revised in line numbering mode)
 			appendComment("", _indent);
 		}
@@ -1543,7 +1648,12 @@ public class BasGenerator extends Generator
 					}
 				}
 				// END KGU#993 2021-10-03
-				signature += (_paramNames.get(p)).trim();
+				// START KGU#1175 2025-02-08: Bugfix #1190 We better register params as declared
+				//signature += (_paramNames.get(p)).trim();
+				String paramName = _paramNames.get(p).trim();
+				signature += paramName;
+				this.wasDefHandled(_root, paramName, true);
+				// END KGU#2025-02-08
 				if (_paramTypes != null)
 				{
 					// START KGU#993 2021-10-03: Bugfix #993 Wrong handling of const and array parameters
@@ -1569,56 +1679,82 @@ public class BasGenerator extends Generator
 			{
 				signature += transformKeyword(" AS ") + transformType(_resultType, "Real");
 			}
-			furtherIndent += this.getIndent();
+			// START KGU#1175 2025-02-07: Bugfix #1190
+			//furtherIndent += this.getIndent();
+			if (_root.isSubroutine()) {
+				furtherIndent += this.getIndent();
+			}
+			// END KGU#1175 2025-02-07
 		}
 
 		code.add(this.getLineNumber() + _indent + pr + " " + signature);
 
 		return furtherIndent;
 	}
-	
+
 	/* (non-Javadoc)
 	 * @see lu.fisch.structorizer.generators.Generator#generatePreamble(lu.fisch.structorizer.elements.Root, java.lang.String, lu.fisch.utils.StringList)
 	 */
 	@Override
 	protected String generatePreamble(Root _root, String _indent, StringList _varNames)
 	{
-		// Old BASIC dialocts with line numbers usually don't support declarations
+		// Old BASIC dialects with line numbers usually don't support declarations
 		if (!this.optionCodeLineNumbering())
 		{
 			appendComment("TODO: Check and accomplish your variable declarations here:", _indent );
-			for (int v = 0; v < _varNames.count(); v++) {
-				// START KGU#542 2019-12-01: Enh. #739 Don't do this for enumeration constants here
-				//appendComment(transformKeyword("DIM ") + _varNames.get(v) + transformKeyword(" AS") + " <type>", indentPlusOne);
-				String varName = _varNames.get(v);
-				String constVal = null;
-				if (((constVal = _root.constants.get(varName)) == null || !constVal.startsWith(":"))
-						&& !this.wasDefHandled(_root, varName, true)) {
-					TypeMapEntry type = _root.getTypeInfo().get(varName);
-					String typeName = "???";
-					if (type != null) {
-						StringList typeNames = this.getTransformedTypes(type, true);
-						if (typeNames.count() == 1) {
-							typeName = typeNames.get(0);
-						}
-						while (typeName.startsWith("@")) {
-							varName += "()";
-							typeName = typeName.substring(1);
-						}
-						// START KGU#993 2021-10-04: Issue #993
-						varName = varName.replace(")(", ",");
-						// END KGU#993 2021-10-04
-					}
-					addCode(transformKeyword("DIM ") + varName + transformKeyword(" AS ") + typeName, _indent, false);
-				}
-				// END KGU#542 2019-12-01
-			}
-			appendComment("", _indent);
+		// START KGU#1175 2025-02-06: Bugfix #1188
 		}
 		else
 		{
 			appendComment("TODO: add the respective type suffixes to your variable names if required", _indent );
 		}
+		// END KGU##1175 2025-02-06
+		// START KGU#1175 2025-02-07: Bugfix #1190 Includables had been forgotten
+		if (topLevel) {
+			// With a top-level subroutine, it will have been done in the header
+			if (!_root.isSubroutine()) {
+				appendIncludeCode(_indent);
+			}
+		}
+		else {
+			if (code.count() == subroutineInsertionLine) {
+				appendComment("", _indent);	// Make sure the subroutines are inserted before library entry points
+			}
+			libraryInsertionLine = code.count();
+			appendComment("", _indent);
+		}
+		// END KGU#1175 2025-02-07
+// START KGU#1173/KGU#1175 2025-02-07: Bugfix #1188, #1190 Disabled
+//		for (int v = 0; v < _varNames.count(); v++) {
+//			// START KGU#542 2019-12-01: Enh. #739 Don't do this for enumeration constants here
+//			//appendComment(transformKeyword("DIM ") + _varNames.get(v) + transformKeyword(" AS") + " <type>", indentPlusOne);
+//			declareVariable(_varNames.get(v), _root, _indent);
+//			// END KGU#542 2019-12-01
+//		}
+		// First: generate the constants
+		for (Entry<String, String> entry: _root.constants.entrySet()) {
+			// Constant routine parameters will usually have value null
+			// KGU#542 2019-12-01: Enh. #739 Don't do this for enumeration constants here
+			if (entry.getValue() != null && !entry.getValue().startsWith(":")) {
+				declareVariable(entry.getKey(), _root, _indent);
+			}
+		}
+		// Second: generate the type definitions
+		for (Entry<String, TypeMapEntry> entry: _root.getTypeInfo(routinePool).entrySet()) {
+			String typeKey = entry.getKey();
+			if (typeKey.startsWith(":")) {
+				this.generateTypeDef(typeKey, entry.getValue(), _root, _indent, false);
+			}
+		}
+		// Third: generate the remaining variable declarations
+		for (int v = 0; v < _varNames.count(); v++) {
+			String varName = _varNames.get(v);
+			if (_root.constants.get(varName) == null) {
+				declareVariable(varName, _root, _indent);
+			}
+		}
+// END KGU#1173/KGU#1175 2025-02-07
+		appendComment("", _indent);
 		return _indent;
 	}
 
@@ -1701,4 +1837,183 @@ public class BasGenerator extends Generator
 	}
 	// END KGU#74 2015-12-18
 	
+	// START KGU#1175 2025-02-07: Bugfix #1190 We must care for the includables
+	/**
+	 * Appends the generated code for all included stuff in topological order
+	 * Intended to be used at top level before the subroutine header or before
+	 * all local declarations occur. Likely to add at least one separation line
+	 * if the include queue isn't entirely empty.
+	 * 
+	 * @param _indent - current indentation level
+	 */
+	private void appendIncludeCode(String _indent) {
+		Root[] includes = new Root[] {};
+		includes = this.includedRoots.toArray(includes);
+		if (includes.length > 0) {
+			addSepaLine();
+		}
+		int nLines = this.code.count();
+		// Enh. #389 - code of includes is to be produced here
+		for (Root incl: includes) {
+			generateCode(incl.children, _indent);
+		}
+		if (code.count() > nLines) {
+			addSepaLine();
+		}
+	}
+	// END KGU#1175 2025-02-07
+
+	// START KGU#1173/KGU#1175 2025-02-06: Bugfix #1188, #1190 extracted from preamble
+	/**
+	 * Appends a variable declaration for variable {@code _varName} if possible.
+	 * 
+	 * @param _varName - name of the variable to be declared
+	 * @param _root - the owning {@link Root}
+	 * @param _indent - th current indentation
+	 */
+	private void declareVariable(String _varName, Root _root, String _indent) {
+		String constVal = null;
+		if (((constVal = _root.constants.get(_varName)) == null || !constVal.startsWith(":"))
+				&& !this.wasDefHandled(_root, _varName, true, true)) {
+			TypeMapEntry type = _root.getTypeInfo().get(_varName);
+			String typeName = "???";
+			if (type != null) {
+				StringList typeNames = this.getTransformedTypes(type, true);
+				if (typeNames.count() == 1) {
+					typeName = typeNames.get(0);
+				}
+				// START KGU#1175 2025-02-06: Bugfix #1188 We should add sizes if possible
+				int level = 0;
+				// END KGU#1175 2025-02-06
+				while (typeName.startsWith("@")) {
+					// START KGU#1175 2025-02-06: Bugfix #1188 produce sensible type info
+					//varName += "()";
+					int maxIx = type.getMaxIndex(level++);
+					_varName += "(";
+					if (maxIx >= 0) {
+						_varName += maxIx;
+					}
+					_varName += ")";
+					// END KGU#1175 2025-02-06
+					typeName = typeName.substring(1);
+				}
+				// START KGU#993 2021-10-04: Issue #993
+				_varName = _varName.replace(")(", ",");
+				// END KGU#993 2021-10-04
+			}
+			// START KGU#1175 2025-02-06: Bugfix #1188 Deoending on mode
+			//addCode(transformKeyword("DIM ") + varName + transformKeyword(" AS ") + typeName, _indent, false);
+			if (!this.optionCodeLineNumbering() || type != null && (type.isArray() || type.isRecord())) {
+				addCode(transformKeyword("DIM ") + _varName
+						+ transformKeyword(" AS ") + typeName, _indent, false);
+			}
+			// END KGU#1175 2025-02-06
+		}
+	}
+	// END KGU#1173/KGU#1175 2025-02-06
+
+	// START KGU#1175 2025-02-07: Bugfix #1190 We must place type definitions in the preamble when variables refer to them
+	/**
+	 * Generates a BASIC type definition for the type with name {@code _typeName}
+	 * represented by {@code _type} Enumeration
+	 *  
+	 * @param _typeKey - type map key of the type (name preceded by ':')
+	 * @param _type - the {@link TypeMapEntry} for the type
+	 * @param _root - the owning (defining) {@link Root}
+	 * @param _indent - the current indentation
+	 * @return {@code false} if the type could not be found in the type map,
+	 *     {@code true} otherwise (no matter whether the type definition was
+	 *     generated or redundant.
+	 */
+	private boolean generateTypeDef(String _typeKey, TypeMapEntry _type, Root _root, String _indent, boolean _isDisabled) {
+		String indentPlus1 = _indent + this.getIndent();
+		if (_type == null) {
+			return false;
+		} else if (wasDefHandled(_root, _typeKey, false, true)) {
+			return true;
+		}
+		String typeName = _typeKey.substring(1);
+		if (_type.isRecord()) {
+			Map<String, TypeMapEntry> compSpecs = _type.getComponentInfo(true);
+			// START KGU#1176 2025-02-07: Bugfix #1190 We need a definition for modern Basic too
+			//if (this.optionCodeLineNumbering()) {
+			// END KGU#1176 2025-02-07
+			// We apply a QBASIC construct (see https://en.wikibooks.org/wiki/QBasic/Arrays_and_Types)
+			addCode(transformKeyword("TYPE") + " " + typeName, _indent, _isDisabled);
+			for (Entry<String, TypeMapEntry> entry: compSpecs.entrySet()) {
+				String compKeyword = "";
+				if (!this.optionCodeLineNumbering()) {
+					compKeyword = "Dim ";
+				}
+				String compTypeName = "???";
+				String varSpec = entry.getKey();
+				TypeMapEntry compType = entry.getValue();
+				if (compType != null) {
+					compTypeName = entry.getValue().getCanonicalType(true, true);
+					StringList dims = new StringList();
+					while (compTypeName.startsWith("@")) {
+						int maxIndex = compType.getMaxIndex(dims.count());
+						if (maxIndex < 0) {
+							dims.add("");
+						}
+						else {
+							dims.add(Integer.toString(maxIndex));
+						}
+						compTypeName = compTypeName.substring(1);
+					}
+					if (!dims.isEmpty()) {
+						varSpec += "(" + dims.concatenate(", ") + ")";
+						compKeyword = "Dim ";
+					}
+				}
+				// START KGU#1176 2025-02-07: Bugfix #1190 We need a definition for modern Basic too
+				//addCode(entry.getKey() + transformKeyword(" AS ") + transformType(compTypeName, "???"), indentPlus1, _disabled);
+				addCode(compKeyword + varSpec + transformKeyword(" AS ") +
+						transformType(compTypeName, "???"), indentPlus1, _isDisabled);
+				// END KGU#1176 2025-02-07
+			}
+			addCode(transformKeyword("END ") + transformKeyword("TYPE"), _indent, _isDisabled);
+			// START KGU#1176 2025-02-07: Bugfix #1190 We need a definition for modern Basic too
+			//}
+			// END KGU#1176 2025-02-07
+		}
+		else if (_type.isEnum()) {
+			StringList enumItems = _type.getEnumerationInfo();
+			if (this.optionCodeLineNumbering()) {
+				if (!_isDisabled) {
+					this.appendComment("enum " + typeName + "(" + enumItems.concatenate(", ") + ")", _indent);
+				}
+				// In vintage BASIC, we will just generate separate constant definitions
+				int offset = 0;
+				String lastVal = "";
+				for (int i = 0; i < enumItems.count(); i++) {
+					String[] itemSpec = enumItems.get(i).split("=", 2);
+					if (itemSpec.length > 1) {
+						lastVal = itemSpec[1].trim();
+						offset = 0;
+						try {
+							int code = Integer.parseUnsignedInt(lastVal);
+							lastVal = "";
+							offset = code;
+						}
+						catch (NumberFormatException ex) {}
+					}
+					addCode(transformKeyword("CONST ") + itemSpec[0] + " = " + transform(lastVal) + (lastVal.isEmpty() ? "" : "+") + offset, _indent, _isDisabled);
+					offset++;
+				}
+				appendComment("end type "+ typeName, _indent);
+			}
+			else {
+				// We use a VisualBasic feature here (see https://docs.microsoft.com/de-de/dotnet/visual-basic/language-reference/statements/enum-statement)
+				addCode(transformKeyword("ENUM ") + typeName, _indent, _isDisabled);
+				for (int i = 0; i < enumItems.count(); i++) {
+					addCode(transform(enumItems.get(i)), indentPlus1, _isDisabled);
+				}
+				addCode(transformKeyword("END ENUM"), _indent, _isDisabled);
+			}
+		}
+		this.setDefHandled(_root.getSignatureString(false, false), _typeKey);
+		return true;
+	}
+
 }
